tambahkan dokumentasi store laporan/lainlain (swagger)
